--- a/index.html
+++ b/index.html
@@ -1,39 +1,68 @@
-Here is the stuff. 
-<canvas id="canvas"></canvas>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<!DOCTYPE html>
+<style>
+
+button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+circle {
+  fill: none;
+  stroke: #000;
+  stroke-width: 1.5px;
+}
+
+</style>
+<button>Click Me</button>
+<svg width="960" height="500"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
-var num = 20000;
 
-var canvas = document.getElementById("canvas");
-var width = canvas.width = 960;
-var height = canvas.height = 500;
-var ctx = canvas.getContext("2d");
+var svg = d3.select("svg"),
+    margin = {top: 30, right: 30, bottom: 30, left: 30},
+    width = +svg.attr("width") - margin.left - margin.right,
+    height = +svg.attr("height") - margin.top - margin.bottom,
+    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-var particles = d3.range(num).map(function(i) {
-  return [Math.round(width*Math.random()), Math.round(height*Math.random())];
+var x = d3.scaleTime()
+    .range([0, width]);
+
+var xAxis = d3.axisBottom(x);
+
+var xAxisG = g.append("g")
+    .attr("transform", "translate(0, " + height + ")");
+
+d3.timer(function() {
+  var now = Date.now();
+  x.domain([now - 5000, now]);
+  xAxisG.call(xAxis);
 });
 
-d3.timer(step);
+d3.select("button").on("click", function() {
+  var time = Date.now();
 
-function step() {
-  ctx.fillStyle = "rgba(255,255,255,0.3)";
-  ctx.fillRect(0,0,width,height);
-  ctx.fillStyle = "rgba(0,0,0,0.5)";
-  particles.forEach(function(p) {
-    p[0] += Math.round(2*Math.random()-1);
-    p[1] += Math.round(2*Math.random()-1);
-    if (p[0] < 0) p[0] = width;
-    if (p[0] > width) p[0] = 0;
-    if (p[1] < 0) p[1] = height;
-    if (p[1] > height) p[1] = 0;
-    drawPoint(p);
-  });
-};
+  var circle = g.append("circle")
+      .attr("r", 80)
+      .attr("stroke-opacity", 0)
+      .attr("cy", Math.random() * height);
 
-function drawPoint(p) {
-  ctx.fillRect(p[0],p[1],1,1);
-};
+  circle.transition("time")
+      .duration(5000)
+      .ease(d3.easeLinear)
+      .attrTween("cx", function(d) { return function(t) { return x(time); }; })
+
+  circle.transition()
+      .duration(750)
+      .ease(d3.easeCubicOut)
+      .attr("r", 3.5)
+      .attr("stroke-opacity", 1)
+    .transition()
+      .delay(5000 - 750 * 2)
+      .ease(d3.easeCubicIn)
+      .attr("r", 80)
+      .attr("stroke-opacity", 0)
+      .remove();
+});
+
 </script>
-<style>
-html, body { margin: 0; padding: 0; }
-</style>
