--- a/index.html
+++ b/index.html
@@ -1,108 +1,119 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<html>
+<head>
+    <title>Beyond the Uniform</title>
+    <meta charset="utf-8">
+    <link href="./src/netjsongraph.css" rel="stylesheet">
+    <!-- theme can be easily customized via css -->
+    <link href="./src/netjsongraph-theme.css" rel="stylesheet">
+    <style>
+        #network-graph{
+            width: 1000px;
+            height: 800px;
+            margin: 0 auto;
+            border: 1px solid #ccc;
+        }
+        body{ overflow: hidden }
+        .njg-node{ fill: #3182bd }
+        .njg-node.gateway{ fill: #ff8000 !important }
+        .njg-link{ stroke-width: 5px }
+        .njg-link:hover,.njg-link.njg-open{
+            stroke-width: 6px !important;
+            stroke-opacity: 0.7 !important
+        }
+        /* legend */
+        #legend{
+            position: absolute;
+            top: auto;
+            left: 5px;
+            bottom: 5px;
+            width: auto;
+            height: auto;
+            max-width: 250px;
+            padding: 0 15px;
+            background: #fbfbfb;
+            border-radius: 2px;
+            border: 1px solid #ccc;
+            color: #6d6357;
+            font-family: Arial, sans-serif;
+            font-family: sans-serif;
+            font-size: 14px;
+        }
+        #legend p{ line-height: 16px; margin: 10px 0 }
+        #legend span{
+            width: 16px;
+            margin-right: 5px;
+        }
+        #legend span.circle{
+            display: inline-block;
+            border-radius: 50%;
+            height: 16px;
+        }
+        #legend span.link{
+            display: inline-block;
+            height: 5px;
+            border-bottom-width: 6px;
+            border-bottom-style: solid;
+        }
+        #legend .node{ background-color: #3182bd }
+        #legend .gateway{ background-color: #ff8000 }
+    </style>
+</head>
+<body>
+    <select id="selector" name="select" autofocus="true" onChange="drawStuff.call(this, event);">
+      <option value="None" selected="true">None</option>
+      <option value="Location">Location</option>
+      <option value="YearsOfService">Years of Service</option>
+      <option value="Industry">Industry</option>
+    </select>
+    <div id="network-graph"></div>
+    <!-- <div id="legend">
+        <p><span class="circle node">&nbsp;</span> ordinary node</p>
+        <p><span class="circle gateway">&nbsp;</span> gateway node</p>
+    </div> -->
+    <script src="./lib/d3.min.js"></script>
+    <script src="./src/netjsongraph.js"></script>
+    <script>
+        function drawStuff(event) {
+            //alert(this.options[this.selectedIndex].text);
+            if (this.options[this.selectedIndex].text == "Location")
+            {
+                document.getElementById("network-graph").innerHTML = "";
+                d3.netJsonGraph("./location.json", {
+                    el: "#network-graph",
+                    linkDistance: 100,
+                    charge: -200,
+                    circleRadius: 9,
+                    defaultStyle: false,
+                });
+            }
+            else if (this.options[this.selectedIndex].text == "Years of Service")
+            {
+                document.getElementById("network-graph").innerHTML = "";
+                d3.netJsonGraph("./yearsOfService.json", {
+                    el: "#network-graph",
+                    linkDistance: 150,
+                    charge: -200,
+                    circleRadius: 9,
+                    defaultStyle: false,
+                });
+            }
+            else if (this.options[this.selectedIndex].text == "Industry")
+            {
+                document.getElementById("network-graph").innerHTML = "";
+                d3.netJsonGraph("./industry.json", {
+                    el: "#network-graph",
+                    linkDistance: 100,
+                    charge: -200,
+                    circleRadius: 9,
+                    defaultStyle: false,
+                });
+            }
+            else {
 
-.links line {
-  stroke: #999;
-  stroke-opacity: 0.6;
-}
+            }
+        }
 
-.nodes circle {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
-
-</style>
-<svg width="960" height="600"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script type="text/javascript" src="d3-ForceEdgeBundling.js"></script>
-<script>
-
-var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height");
-
-var color = d3.scaleOrdinal(d3.schemeCategory20);
-
-var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody())
-    .force("center", d3.forceCenter(width / 2, height / 2));
-
-d3.json("data.json", function(error, graph) {
-  if (error) throw error;
-
-  var link = svg.append("g")
-      .attr("class", "links")
-    .selectAll("line")
-    .data(graph.links)
-    .enter().append("line")
-      .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
-
-  var node = svg.append("g")
-      .attr("class", "nodes")
-    .selectAll("circle")
-    .data(graph.nodes)
-    .enter().append("circle")
-      .attr("r", 5)
-      .attr("fill", function(d) { return color(d.Location); })
-      .call(d3.drag()
-          .on("start", dragstarted)
-          .on("drag", dragged)
-          .on("end", dragended));
-
-  var tooltop = svg.append("g")
-    .attr("class", "tooltip")
-    .style("position", "absolute")
-    .style("z-index", 10)
-    .style("visibility", "hidden");
-
-  // tooltip.append("div")
-  //   .attr("id", "tt-name")
-  //   .text("simple");
-  //
-  // tooltip.append("div")
-  //   .attr("id", "tt-size")
-  //   .text("simple");
-
-  node.append("title")
-      .text(function(d) { return d.id; });
-
-  simulation
-      .nodes(graph.nodes)
-      .on("tick", ticked);
-
-  simulation.force("link")
-      .links(graph.links);
-
-  function ticked() {
-    link
-        .attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
-
-    node
-        .attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  }
-});
-
-function dragstarted(d) {
-  if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-  d.fx = d.x;
-  d.fy = d.y;
-}
-
-function dragged(d) {
-  d.fx = d3.event.x;
-  d.fy = d3.event.y;
-}
-
-function dragended(d) {
-  if (!d3.event.active) simulation.alphaTarget(0);
-  d.fx = null;
-  d.fy = null;
-}
-
-</script>
+    </script>
+</body>
+</html>
