--- a/hw3/index.html
+++ b/hw3/index.html
@@ -304,6 +304,7 @@
 
     <body>
         <h1> Agricultural Losses 2015 </h1>
+        <p> Need to zoom out to avoid overlapping. </p>
         <div class="whole" id="whole">
             <div class="map" id="map">
                 <h2> Losses 2015 [$] Damage Type: All <h2>
