--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
             // D3 Projection
             var projection = d3.geo.albersUsa()
-			   .translate([width/2, height/2])    // translate to center of screen
-			   .scale([750]);          // scale things down so see entire US
+			   .translate([width/2, height/2])
+			   .scale([750]);
 
             // Define path generator
-            var path = d3.geo.path()               // path generator that will convert GeoJSON to SVG paths
-                .projection(projection);  // tell path generator to use albersUsa projection
+            var path = d3.geo.path()
+                .projection(projection);
 
             var svg = d3.select("#map")
                 .append("svg")
@@ -155,16 +155,18 @@
                   var originals = 0;
                   var additions = 0;
                   var thisObject = {};
+                  //empty YOS array
+                  var emptyYOSArray = []
+                  for(var i=0; i<=35; i++){
+                      emptyYOSArray[i] = 0;
+                  }
                   for (var i = 0; i < data.length; i++) {
 
                     var years = data[i].YearsService;
-                    if (typeof thisObject[years] == "undefined")
+                    //handle 35+ scenario
+                    if (years > 35)
                     {
-                        thisObject[years] = 1;
-                    }
-                    else
-                    {
-                        thisObject[years]++;
+                        years = 35;
                     }
                     var dataState = data[i].SimpleLocation;
                     var dataSpecialty = data[i].WarfareSpecialty;
@@ -178,7 +180,24 @@
                   	for (var j = 0; j < json.features.length; j++)  {
                   		var jsonState = json.features[j].properties.name;
                   		if (dataState == jsonState && speciality == dataSpecialty) {
-                      		// Copy the data value into the JSON
+                            //enter in yos object
+                            if (typeof json.features[j].properties.yearsOfServiceArray == "undefined") {
+                               json.features[j].properties.yearsOfServiceArray = [];
+                               json.features[j].properties.yearsOfServiceArray[years] = 1;
+                            }
+                            else
+                            {
+                                if (typeof json.features[j].properties.yearsOfServiceArray[years] == "undefined")
+                                {
+                                    json.features[j].properties.yearsOfServiceArray[years] = 1;
+                                }
+                                else
+                                {
+                                    json.features[j].properties.yearsOfServiceArray[years]++;
+                                }
+
+                            }
+                            // Copy the data value into the JSON
                             if (typeof json.features[j].properties.veteranPopulation == "undefined") {
                                json.features[j].properties.veteranPopulation = 1;
                             }
@@ -187,14 +206,40 @@
                                 additions++;
                                 json.features[j].properties.veteranPopulation++;
                             }
-
                       		// Stop looking through the JSON
                       		break;
                   		}
                   	}
                   }
-                  console.log(thisObject);
-                  var max_area = d3.max( json.features, function(d) { return d.properties.veteranPopulation });
+
+                  //Populate years score
+                  for (var j = 0; j < json.features.length; j++)  {
+                      var yearsArray = json.features[j].properties.yearsOfServiceArray;
+                      var range = 5;
+                      yearsScore = 0;
+                      if (typeof yearsArray != "undefined")
+                      {
+                          for (var i = yearsOfService - range; i < yearsOfService + range; i++)
+                          {
+                              if (i >= 0)
+                              {
+                                  if (typeof yearsArray[i] != "undefined")
+                                  {
+                                      yearsScore += yearsArray[i];
+                                  }
+                              }
+                          }
+                      }
+                      json.features[j].properties.yearsScore = yearsScore;
+                  }
+
+
+
+
+                  var max_area = d3.max( json.features, function(d)
+                  {
+                      return (d.properties.veteranPopulation + (d.properties.yearsScore * 2))
+                  });
                   var color = d3.scale.linear().domain([0, max_area]).range(['beige', 'red']);
 
                   svg.selectAll("path")
@@ -206,8 +251,20 @@
                   	.style("stroke-width", "1")
                   	.style("fill", function(d) {
 
-                  	// Get data value
-                  	var value = d.properties.veteranPopulation;
+                    var currentYearsScore = 0;
+                    if (typeof d.properties.yearsScore != "undefined")
+                    {
+                        currentYearsScore = d.properties.yearsScore;
+                    }
+
+                    var currentPopulation = 0;
+                    if (typeof d.properties.veteranPopulation != "undefined")
+                    {
+                        currentPopulation = d.properties.veteranPopulation;
+                    }
+
+                  	var value = currentPopulation + (currentYearsScore * 2);
+                    // console.log(d.properties.name + ' : ' + currentYearsScore + ' : ' + currentPopulation);
                     if (typeof value == "undefined")
                     {
                         return color(0);
@@ -223,11 +280,21 @@
                     {
                         tempPop = d.properties.veteranPopulation;
                     }
+                    var tempCurrentYOS = 0
+                    if (typeof d.properties.yearsOfServiceArray != "undefined")
+                    {
+                        if (typeof d.properties.yearsOfServiceArray[yearsOfService] != "undefined")
+                        {
+                            tempCurrentYOS = d.properties.yearsOfServiceArray[yearsOfService];
+                        }
+                    }
                     var displayString = d.properties.name + " Veteran Population: " + tempPop.toString();
+                    var yearsString = "<br>Years Of Service Similarity: " + tempCurrentYOS.toString();
+
                     div.transition()
                     	 .duration(200)
                          .style("opacity", .9);
-                         div.text(displayString)
+                         div.html(displayString + yearsString)
                          .style("left", (d3.event.pageX) + "px")
                          .style("top", (d3.event.pageY - 28) + "px");
               	  })
@@ -240,7 +307,7 @@
                   })
                   .on("click", function(d) {
                       //TODO: make pie chart show up once this works
-                      console.log("CLICKED");
+                    //   console.log("CLICKED");
                   })
               });
             });
